--- a/app/views/pages/layouts/default.liquid.haml
+++ b/app/views/pages/layouts/default.liquid.haml
@@ -9,8 +9,21 @@ is_layout: false
     %meta{charset: "utf-8"}
     %meta{content: "IE=edge", "http-equiv" => "X-UA-Compatible"}
     %meta{content: "width=device-width, initial-scale=1", name: "viewport"}
+    %meta{content: "{{site.meta_keywords}} {{page.meta_keywords}}", name: "keywords"}
 
-    %title {{ site.name }}
+    {% if page.meta_description %}
+      %meta{name:"description" content:"{{ page.meta_description }}"}
+    {% else %}
+      %meta{name:"description" content:"{{ site.meta_description }}"}
+    {% endif %}
+
+    %title 
+      {{ page.title }} - {{ site.name }} |
+      {% if page.seo_title %}
+        {{ page.seo_title }}
+      {% else %}
+        {{ site.seo_title }}
+      {% endif %}
 
     %link{href: "{{ 'favicon.png' | theme_image_url }}", rel: "shortcut icon"}
 
